<resources>
    <string name="app_name">ChefDeluxe</string>

    <!-- Login -->

    <string name="tv_title">Chef Deluxe</string>
    <string name="hint_user">Usuario o correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btt_enter">Entrar</string>
    <string name="tv_olvidado_session">¿Has olvidado tu contraseña?</string>
    <string name="tv_register">¿No tienes una cuenta? <b>Regístrate</b>.</string>
    <string name="tv_failed_user_pass">El correo electrónico o la contraseña no son correctos. Inténtalo de nuevo.</string>
    <string name="tv_empty_user_pass">El correo electrónico o la contraseña están vacíos. </string>
    <string name="img_content_description_fail">El correo electrónico o la contraseña están vacíos. </string>
    <string name="name_rol_admin">"ROLE_ADMIN"</string>
    <string name="name_rol_chef">"ROLE_CHEF"</string>
    <string name="name_rol_client">"ROLE_CLIENT"</string>

    <string name="tv_data_user">%1$s %2$s</string>

    <!-- Interface Admin -->
    <string name="tv_title_admin">Administrador</string>

    <!-- Interface Cocinero -->
    <string name="tv_title_cocinero">Cocinero</string>

    <!-- Interface Cliente -->
    <string name="tv_title_cliente">Cliente</string>


    <!-- Errors-->
    <string name="codigo_200">"La solicitud ha tenido éxito."</string>
    <string name="codigo_500">"El correo electrónico o la contraseña no son correctos."</string>
    <string name="codigo_401">"Carece de credenciales validas de autenticación."</string>

    <string name="codigo_onFailure_connexion">"Fallo en la red. Comprueba la conexió."</string>
    <string name="codigo_onFailure_conversion">"Problema de conversión."</string>
    <string name="btt_logout">"Logout"</string>
    <string name="btt_options">"Opciones"</string>


    <!-- Register -->
    <string name="tv_register_login">¿Ya tienes una cuenta? <b>Inicia sessión</b>.</string>
    <string name="tv_register_pass_requirement">Tu contraseña debe contener al menos 8 caracteres i incluir un número o un caràcter especial.</string>
    <string name="btt_register_acc_create">Crear cuenta</string>
    <string name="btt_register_select_rol">Seleccionar un rol</string>
    <string name="btt_register_rol_client">Cliente</string>
    <string name="btt_register_rol_cook">Cocinero</string>


</resources>