<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title_createAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/best_valentina"
        android:text="@string/tv_title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtv_user"
        style="@style/OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_createAcc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edtv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtv_password"
        style="@style/OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="@+id/edtv_user"
        app:layout_constraintStart_toStartOf="@+id/edtv_user"
        app:layout_constraintTop_toBottomOf="@+id/edtv_user"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edtv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btt_accept"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:text="@string/btt_enter"
        android:textColor="@color/login_btt"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/edtv_password"
        app:layout_constraintStart_toStartOf="@+id/edtv_password"
        app:layout_constraintTop_toBottomOf="@+id/edtv_password"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <TextView
        android:id="@+id/tv_lostPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_olvidado_session"
        android:textSize="13sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edtv_password"
        app:layout_constraintTop_toBottomOf="@+id/btt_accept" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="14dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/tv_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/tv_register"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>